mikec/tests/PASS/base/arrays/3.mc
/* declare array*/
int main()
{
    int arr[2];

}