mikec/tests/fail/array/12.mc
/*2d array without length*/
int main(){
    int x[][];
}
